[gd_scene load_steps=7 format=3 uid="uid://b64heix3puy0v"]

[ext_resource type="Theme" uid="uid://dphk2cvguw754" path="res://ui/sprout_land_theme.tres" id="1_l600d"]
[ext_resource type="Script" uid="uid://bs4stnp16vn2e" path="res://ui/level_select_ui/mission_details_ui.gd" id="1_nj7oi"]
[ext_resource type="PackedScene" uid="uid://bec2v8kbofnve" path="res://ui/level_select_ui/goal_check_box.tscn" id="3_t0ror"]

[sub_resource type="SystemFont" id="SystemFont_nj7oi"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_l600d"]
font_size = 50
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t0ror"]
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="MissionDetails" type="VBoxContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 523.0
offset_bottom = 481.0
theme_override_constants/separation = 40
script = ExtResource("1_nj7oi")

[node name="MissioGoalPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 404)
layout_mode = 2
theme = ExtResource("1_l600d")

[node name="MarginContainer" type="MarginContainer" parent="MissioGoalPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MissioGoalPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MissioGoalPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nj7oi")
text = "Mission Name"
label_settings = SubResource("LabelSettings_l600d")

[node name="Underline" type="ColorRect" parent="MissioGoalPanel/MarginContainer/VBoxContainer/TitleLabel"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MainGoalContainer" type="VBoxContainer" parent="MissioGoalPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="GoalCheckBox1" parent="MissioGoalPanel/MarginContainer/VBoxContainer/MainGoalContainer" instance=ExtResource("3_t0ror")]
layout_mode = 2
text = "Collect 2 cookies within 120 seconds"

[node name="Spacer1" type="Control" parent="MissioGoalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StretchGoal" type="Label" parent="MissioGoalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stretch Goals"
label_settings = SubResource("LabelSettings_t0ror")

[node name="StretchGoalContainer" type="VBoxContainer" parent="MissioGoalPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="GoalCheckBox2" parent="MissioGoalPanel/MarginContainer/VBoxContainer/StretchGoalContainer" instance=ExtResource("3_t0ror")]
layout_mode = 2

[node name="GoalCheckBox3" parent="MissioGoalPanel/MarginContainer/VBoxContainer/StretchGoalContainer" instance=ExtResource("3_t0ror")]
layout_mode = 2
text = "Block a Laser"

[node name="MissionButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Finish Mission"

[connection signal="visibility_changed" from="MissioGoalPanel" to="MissioGoalPanel" method="_on_visibility_changed"]
[connection signal="pressed" from="MissionButton" to="." method="_on_mission_button_pressed"]
